footer content gap problem solve for small dives

--- a/styles/style.css
+++ b/styles/style.css
@@ -795,7 +795,13 @@ select {
   }
 
   /* Footer section responsive */
+  .footer-content {
+    gap: 30px;
+  }
   .believe {
     max-width: 317px;
+  }
+  .get-start-container {
+    gap: 20px;
   }
 }
